react to light areas

--- a/son3.html
+++ b/son3.html
@@ -6,10 +6,12 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(211, 35, 4);
+            background-color: rgb(211, 207, 4);
         }
         #video-container {
             position: relative;
+            top: 0;
+            left: 0;
             width: 640px;
             height: 700px;
         }
