react to light areas

--- a/son3.html
+++ b/son3.html
@@ -6,10 +6,10 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(211, 180, 4);
+            background-color: rgb(211, 4, 132);
         }
         #video-container {
-            position: relative;
+            position: fixed;
             top: 0;
             left: 500;
             width: 640px;
@@ -21,7 +21,7 @@
             height: 400px;
         }
         #pixel-grid {
-            position: absolute;
+            position: static;
             top: 0;
             left: 500;
             display: grid;
