--- a/son3.html
+++ b/son3.html
@@ -6,12 +6,12 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(211, 4, 132);
+            background-color: rgb(166, 211, 4);
         }
         #video-container {
-            position: fixed;
+            position: relative;
             top: 0;
-            left: 500;
+            left: 500px;
             width: 640px;
             height: 700px;
         }
@@ -21,9 +21,9 @@
             height: 400px;
         }
         #pixel-grid {
-            position: static;
+            position: absolute;
             top: 0;
-            left: 500;
+            left: 500px;
             display: grid;
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(15, 32px);
@@ -39,7 +39,7 @@
         #grid {
             position: absolute;
             top: 0;
-            left: 500;
+            left: 500px;
             width: 640px;
             height: 640px;
             display: grid;
