react to light areas

--- a/son3.html
+++ b/son3.html
@@ -203,7 +203,7 @@
 
         document.addEventListener('keydown', (event) => {
             if (event.key.toLowerCase() === 'd') {
-                drone.triggerAttack(currentNote, gain);
+                drone.triggerAttack(currentNote, 0.5);
             }
         });
 
