react to light areas

--- a/son3.html
+++ b/son3.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(70, 211, 4);
+            background-color: rgb(211, 180, 4);
         }
         #video-container {
             position: relative;
@@ -156,7 +156,7 @@
         let pentatonicScale = ['A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5'];
         let pentatonicScale2 = ['A#2', 'C#3', 'D#3', 'F3', 'G#3', 'A#3', 'C#4', 'D#4', 'F4', 'G#4', 'A#4', 'C#5', 'D#5', 'F5', 'G#5'];
         let pentatonicScale3 = ['B2', 'D3', 'E3', 'F#3', 'A3', 'B3', 'D4', 'E4', 'F#4', 'A4', 'B4', 'D5', 'E5', 'F#5', 'A5'];
-        let drone = new Tone.PulseOscillator(50, 0.4).toDestination();
+        let drone = new Tone.Synth().toDestination();
         let droneNote = 'A1';
         let droneNote2 = 'A#1';
         let droneNote3 = 'B2';
@@ -203,7 +203,7 @@
 
         document.addEventListener('keydown', (event) => {
             if (event.key.toLowerCase() === 'd') {
-                drone.triggerAttack(currentNote, 0.5);
+                drone.triggerAttack(currentNote, "+0.5", 0.5);
             }
         });
 
