--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(246, 246, 246);
+            background-color: rgb(224, 221, 3);
         }
         #video-container {
             position: relative;
@@ -74,6 +74,10 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/addons/p5.dom.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/ml5@latest/dist/ml5.min.js"></script>
+
     <script>
         const pixelSize = 32;
         const threshold = 155;
@@ -348,10 +352,7 @@
             activeSynths.push(synth);
         }
     </script>
-   <div>Teachable Machine Image Model - p5.js and ml5.js</div>
-   <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/addons/p5.dom.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/ml5@latest/dist/ml5.min.js"></script>
+
    <script type="text/javascript">
      // Classifier Variable
      let classifier;
@@ -360,7 +361,7 @@
      
      // Video
      let video;
-     let flippedVideo;
+
      // To store the classification
      let label = "";
    
@@ -376,7 +377,7 @@
        video.size(320, 240);
        video.hide();
    
-       flippedVideo = ml5.flipImage(video);
+
        // Start classifying
        classifyVideo();
      }
@@ -384,7 +385,7 @@
      function draw() {
        background(0);
        // Draw the video
-       image(flippedVideo, 0, 0);
+       image(video, 0, 0);
    
        // Draw the label
        fill(255);
@@ -395,9 +396,9 @@
    
      // Get a prediction for the current video frame
      function classifyVideo() {
-       flippedVideo = ml5.flipImage(video)
-       classifier.classify(flippedVideo, gotResult);
-       flippedVideo.remove();
+
+       classifier.classify(video, gotResult);
+       video.remove();
    
      }
    
