trained AI model

--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(3, 135, 224);
+            background-color: rgb(3, 224, 21);
         }
         #video-container {
             position: relative;
@@ -18,7 +18,7 @@
         #controls {
             position: static;
             width: 400px;
-            height: 400px;
+            height: 100px;
         }
         #pixel-grid {
             position: absolute;
@@ -110,7 +110,7 @@
      //}
    
      function draw() {
-       background(0);
+       //background(0);
        // Draw the video
       // image(video, 0, 0);
    
