trained AI model

--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(110, 133, 209);
+            background-color: rgb(209, 202, 110);
         }
         #video-container {
             position: relative;
@@ -125,7 +125,7 @@
      function classifyVideo() {
 
        classifier.classify(videoElement, gotResult);
-       //videoElement.remove();
+       videoElement.remove();
    
      }
    
