trained AI model

--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(209, 202, 110);
+            background-color: rgb(63, 7, 51);
         }
         #video-container {
             position: relative;
@@ -110,9 +110,9 @@
      }
    
      function draw() {
-       //background(0);
+       background(0);
        // Draw the video
-      // image(video, 0, 0);
+      image(videoElement, 0, 0);
    
        // Draw the label
        fill(255);
